<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.WelcomeActivity"
    android:fillViewport="true">

    <LinearLayout
        android:padding="16dp"
        android:id="@+id/main_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:text="@string/mnemonic_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/mnemonic_help" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mnemonic_layout"
            app:errorEnabled="true"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mnemonic"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
                android:selectAllOnFocus="true"
                android:singleLine="false" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/action_generate" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/button_capture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:text="@string/action_capture" />

            <Button
                android:id="@+id/button_paste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:text="@string/action_paste" />

        </LinearLayout>

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:text="@string/password_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/password_help" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            app:errorEnabled="true"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/access_wallet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_wallet_button" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>