<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.UseFragment"
    android:fillViewport="true">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/target_address_layout"
            app:errorEnabled="true"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/target_address"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="@string/hint_target_address"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/button_capture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:text="@string/action_capture" />

            <Button
                android:id="@+id/button_paste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:text="@string/action_paste" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- TextView
                android:id="@+id/currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingTop="24dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="25sp" / -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/amount_layout"
                app:errorEnabled="true"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/amount"
                    android:textSize="60sp"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789.,"
                    android:hint="0"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/network_fee_layout"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:paddingStart="2dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"
                android:text="@string/network_fee" />

            <TextView
                android:id="@+id/network_fee_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:textAlignment="textEnd"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/send_payment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send_payment" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>